# ai-trading-assistant

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: main.py
app/agents/: chart_agent.py  image_agent.py  oi_agent.py  sentiment_agent.py
app/api/: auth.py  deps.py  routes.py
app/config/: logger.py  settings.py
app/core/: security.py
app/db/: session.py
app/db/repository/: signal_repo.py  user_repo.py
app/models/: signal_model.py
app/schemas/: signal.py
app/services/: data_fetcher.py  recommendation_engine.py  signal_dispatcher.py
app/utils/: indicators.py
